--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,21 +36,26 @@ jobs:
           - django-version: '4.2'
             redis-version: 'latest'
             python-version: '3.9'
+          
+          # Django 5.1 and python 3.13 with latest redis
+          - django-version: '5.1'
+            redis-version: 'latest'
+            python-version: '3.13'
 
           # latest Django with pre-release redis
           - django-version: '5.1'
             redis-version: 'master'
-            python-version: '3.12'
+            python-version: '3.13'
 
           # latest redis with pre-release Django
           - django-version: 'main'
             redis-version: 'latest'
-            python-version: '3.12'
+            python-version: '3.13'
 
           # pre-release Django and redis
           - django-version: 'main'
             redis-version: 'master'
-            python-version: '3.12'
+            python-version: '3.13'
 
     steps:
       - uses: actions/checkout@v4
