--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ classifiers =
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
     Topic :: Software Development :: Libraries
     Topic :: Utilities
 
@@ -60,9 +61,10 @@ envlist =
     # tests against released versions
     py{38,39}-dj{42}-redislatest
     py{310,311,312}-dj{42,50,51}-redislatest
+    py313-dj51-redislatest
     # tests against unreleased versions
-    py311-dj51-redismaster
-    py311-djmain-redis{latest,master}
+    py313-dj51-redismaster
+    py313-djmain-redis{latest,master}
 
 [gh-actions]
 python =
@@ -71,6 +73,7 @@ python =
     3.10: py310
     3.11: py311
     3.12: py312
+    3.13: py313
 
 [gh-actions:env]
 DJANGO =
